--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -113,15 +113,96 @@ Through the gsreg function of the \verb interface.jl  internal package, users se
   \end{enumerate}
 
 \textbf{end} module \verb Core.jl .
+\vspace{2mm}
 \hrule
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% INSERT PSEUDOCODE HERE IN TABLES OR FIGURES
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 \section{Comparative performance against \textit{R} and \textit{STATA}}
 \label{sec:comparativeperf}
+
+\begin{table*}[!t]
+\tabcolsep1pt
+\centering
+\tbl{Average execution time and speed-up metrics -over 5 runs-}{
+    \scalebox{0.8}{
+    \begin{tabular}{|C{1cm}|C{1cm}|C{1cm}|C{1.5cm}|C{1.5cm}|C{1.5cm}|C{1.5cm}|C{1.5cm}|C{1.5cm}|C{1.5cm}|C{1.5cm}|}
+    \hline
+    \multirow{Cov.} & \multirow{Obs} & \multirow{Threads} & \multicolumn{3}{c|}{Execution time (in seconds)} & \multicolumn{3}{c|}{Parallel Speed-up} & \multicolumn{2}{c|}{Julia Speed-up} \\
+\cline{4-11}      &   &   & Julia & R & Stata & Julia & R & Stata & Over R & Over Stata \\
+    \hline
+    15 & 100 & 1 & 14.0 & 69.1 & 646.6 & 1.0 & 1.0 & 1.0 & 4.9 & 46.2 \\
+    \hline
+    15 & 100 & 4 & 17.0 & 33.4 & 80.3 & 0.8 & 2.1 & 8.0 & 2.0 & 4.7 \\
+    \hline
+    15 & 100 & 16 & 22.0 & 23.6 & 22.1 & 0.6 & 2.9 & 29.2 & 1.1 & 1.0 \\
+    \hline
+    15 & 100 & 32 & 31.4 & 22.3 & 15.1 & 0.4 & 3.1 & 43.0 & 0.7 & 0.5 \\
+    \hline
+    15 & 1000 & 1 & 18.6 & 74.9 & 667.5 & 1.0 & 1.0 & 1.0 & 4.0 & 35.9 \\
+    \hline
+    15 & 1000 & 4 & 18.5 & 35.3 & 81.6 & 1.0 & 2.1 & 8.2 & 1.9 & 4.4 \\
+    \hline
+    15 & 1000 & 16 & 22.2 & 24.6 & 23.3 & 0.8 & 3.1 & 28.7 & 1.1 & 1.0 \\
+    \hline
+    15 & 1000 & 32 & 31.5 & 21.5 & 16.0 & 0.6 & 3.5 & 41.6 & 0.7 & 0.5 \\
+    \hline
+    15 & 10000 & 1 & 61.6 & 142.0 & 809.0 & 1.0 & 1.0 & 1.0 & 2.3 & 13.1 \\
+    \hline
+    15 & 10000 & 4 & 30.5 & 61.4 & 114.7 & 2.0 & 2.3 & 7.1 & 2.0 & 3.8 \\
+    \hline
+    15 & 10000 & 16 & 25.7 & 38.4 & 37.3 & 2.4 & 3.7 & 21.7 & 1.5 & 1.5 \\
+    \hline
+    15 & 10000 & 32 & 33.4 & 35.5 & 26.7 & 1.8 & 4.0 & 30.3 & 1.1 & 0.8 \\
+    \hline
+    20 & 100 & 1 & 169.2 & 10538.9 & 535693.2 & 1.0 & 1.0 & 1.0 & 62.3 & 3165.1 \\
+    \hline
+    20 & 100 & 4 & 65.6 & 9275.4 & 75510.2 & 2.6 & 1.1 & 7.1 & 141.4 & 1151.1 \\
+    \hline
+    20 & 100 & 16 & 44.7 & 8855.2 & 4526.3 & 3.8 & 1.2 & 118.4 & 197.9 & 101.2 \\
+    \hline
+    20 & 100 & 32 & 51.2 & 8732.4 & 1658.2 & 3.3 & 1.2 & 323.0 & 170.7 & 32.4 \\
+    \hline
+    20 & 1000 & 1 & 362.4 & 10765.9 &   & 1.0 & 1.0 &   & 29.7 &  \\
+    \hline
+    20 & 1000 & 4 & 119.0 & 9352.3 &   & 3.0 & 1.2 &   & 78.6 &  \\
+    \hline
+    20 & 1000 & 16 & 58.8 & 8926.4 &   & 6.2 & 1.2 &   & 151.8 &  \\
+    \hline
+    20 & 1000 & 32 & 59.8 & 8753.9 &   & 6.1 & 1.2 &   & 146.4 &  \\
+    \hline
+    20 & 10000 & 1 & 2338.4 & 13218.9 &   & 1.0 & 1.0 &   & 5.7 &  \\
+    \hline
+    20 & 10000 & 4 & 629.4 & 10287.9 &   & 3.7 & 1.3 &   & 16.3 &  \\
+    \hline
+    20 & 10000 & 16 & 198.6 & 9392.3 &   & 11.8 & 1.4 &   & 47.3 &  \\
+    \hline
+    20 & 10000 & 32 & 149.5 & 9041.6 &   & 15.6 & 1.5 &   & 60.5 &  \\
+    \hline
+    25 & 100 & 1 & 6700.7 &   &   & 1.0 &   &   &   &  \\
+    \hline
+    25 & 100 & 4 & 1937.7 &   &   & 3.5 &   &   &   &  \\
+    \hline
+    25 & 100 & 16 & 913.7 &   &   & 7.3 &   &   &   &  \\
+    \hline
+    25 & 100 & 32 & 803.9 &   &   & 8.3 &   &   &   &  \\
+    \hline
+    25 & 1000 & 1 & 14257.4 &   &   & 1.0 &   &   &   &  \\
+    \hline
+    25 & 1000 & 4 & 3954.2 &   &   & 3.6 &   &   &   &  \\
+    \hline
+    25 & 1000 & 16 & 1471.4 &   &   & 9.7 &   &   &   &  \\
+    \hline
+    25 & 1000 & 32 & 1159.9 &   &   & 12.3 &   &   &   &  \\
+    \hline
+    25 & 10000 & 1 & 93450.0 &   &   & 1.0 &   &   &   &  \\
+    \hline
+    25 & 10000 & 4 & 23783.8 &   &   & 3.9 &   &   &   &  \\
+    \hline
+    25 & 10000 & 16 & 6825.6 &   &   & 13.7 &   &   &   &  \\
+    \hline
+    25 & 10000 & 32 & 4660.4 &   &   & 20.1 &   &   &   &  \\
+    \hline
+    \end{tabular}    }   }
+\end{table*}
 
 In table 1, we present a performance comparison of our GLobalSearchRegression Julia-package against its main alternatives: MuMin-pdredge and GSREG (written in  and Stata\footnote{The parallel version of Stata-GSREG is still under development. A preliminary version is available upon request from authors}, espectively).
 Execution times were obtained from a HED architecture using a Threadripper 1950x build, with 16 cores (32 threads) overclocked to 3.8GHz and 64 GiB of DDR4-RAM at 3200Mhz. Comparative scripts were implemented on Julia 1.0.3, R 3.6.0 and Stata 15 IC, running on Ubuntu 18.04.2 LTS -Linux kernel 4.15-\footnote{All these test are available \href{https://github.com/ParallelGSReg/GlobalSearchRegression.jl/tree/master/juliacon2019proceedings/reproducibility}{here}} \vskip 6pt
@@ -132,9 +213,7 @@ However, for databases with 20 or more covariates, our Julia all-subset-regressi
 
 A detailed speed-up analysis is also available for the 25-covariate case. In figure 3, it's shown that our Julia all-subset-regression algorithm scales almost linearly for large databases -while the number of threads is not higher than the number of physical cores-. With small databases, Amdhal's law \cite{Amdahl1967}inputs change. Parallel tasks become lighter and speed-up efficiency degrades consistently with additional threads, because the marginal overhead cost of a larger environment creation is not overcompensated by parallelism gains obtained from additional threads. Notwithstanding, using only physical cores speed-up efficiency is always above 45 \%  -with an average of 84\% for 2, 4, 8 and 16 threads-. 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% INSERT PSEUDOCODE HERE  FIGURES 2 and 3
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 
 \section{Why GlobalSearchRegression.jl is faster than existing alternatives?}
